--- a/aregit.html
+++ b/aregit.html
@@ -1,9 +1,54 @@
+<!doctype html>
 <html>
 <head>
     <title>Hellow World</title>
     <body>
-welcome to akgec ,gzb
-team sae
+<hr>
+<h1>Covid-19</h1>
+<hr>
+<p>Coronavirus disease 2019 (COVID‑19) is an infectious disease caused by severe acute<br>
+    respiratory syndrome coronavirus 2 (SARS-CoV-2). It was first identified in December<br>
+    2019 in Wuhan, Hubei, China, and has resulted in an ongoing pandemic. As of 12 August 2020, <br>
+    more than 20.4 million cases have been reported across 188 countries and territories, resulting <br>
+    in more than 744,000 deaths. More than 12.6 million people have recovered.</p><br>
+
+<h2>Precautions to prevent from Covid-19 </h2>
+<h3>1. Wash your hands frequently and carefully</h3>
+<p>Use warm water and soap and rub your hands for at least 20 seconds. Work the lather to your <br>
+    wrists, between your fingers, and under your fingernails. You can also use an antibacterial and<br>
+    antiviral soap.</p><br>
+<img src="pic1.jfif" width="200" height="100">
+<h3>2. Avoid touching your face</h3>
+<p>SARS-CoV-2 can live on some surfaces for up to 72 hours. You can get the virus on your hands if <br>
+    you touch a surface like:
+
+gas pump handle,
+your cell phone,
+a doorknob.</p>
+<br><img src="pic2.jfif" width="200" height="100">
+<h3>3. Stop shaking hands and hugging people — for now</h3>
+<p>Similarly, avoid touching other people. Skin-to-skin contact can transmit SARS-CoV-2 from one<br>
+    person to another.</p><br>
+<img src="pic3.jfif"width="200" height="150">
+<h2>Helpline Number</h2>
+<table border="1">
+    <tr><th>State COVID ControlRoom Numbers</th>
+  <th>State COVID ControlRoom Numbers</th>
+        <th>State COVID ControlRoom Numbers</th>
+        <th>State COVID ControlRoom Numbers</th>
+    </tr>
+<tr>
+    <td>104</td>
+    <td>1075</td>
+    <td>080-46848600</td>
+    <td>080-46848500</td>
+
+</tr>
+
+
+
+</table>
+
 </body>
 </head>
 </html>
