--- a/aregit.html
+++ b/aregit.html
@@ -2,21 +2,22 @@
 <html>
 <head>
     <title>Hellow World</title>
-    <body>
+</head>
+    <body style="background-color:beige">
 <hr>
-<h1>Covid-19</h1>
+<h1 style="text-align:center; color:red;" >Covid-19</h1>
 <hr>
-<p>Coronavirus disease 2019 (COVID‑19) is an infectious disease caused by severe acute<br>
-    respiratory syndrome coronavirus 2 (SARS-CoV-2). It was first identified in December<br>
+<p  style="text-align:center; " ><b>Coronavirus disease 2019 (COVID‑19) is an infectious disease caused by severe acute
+    respiratory syndrome coronavirus 2 (SARS-CoV-2). <br>It was first identified in December
     2019 in Wuhan, Hubei, China, and has resulted in an ongoing pandemic. As of 12 August 2020, <br>
-    more than 20.4 million cases have been reported across 188 countries and territories, resulting <br>
-    in more than 744,000 deaths. More than 12.6 million people have recovered.</p><br>
+    more than 20.4 million cases have been reported across 188 countries and territories, resulting
+    in more than 744,000 deaths. More than 12.6 million people <br>have recovered.</b></p><br>
 
 <h2>Precautions to prevent from Covid-19 </h2>
 <h3>1. Wash your hands frequently and carefully</h3>
 <p>Use warm water and soap and rub your hands for at least 20 seconds. Work the lather to your <br>
     wrists, between your fingers, and under your fingernails. You can also use an antibacterial and<br>
-    antiviral soap.</p><br>
+    antiviral soap.</p>
 <img src="pic1.jfif" width="200" height="100">
 <h3>2. Avoid touching your face</h3>
 <p>SARS-CoV-2 can live on some surfaces for up to 72 hours. You can get the virus on your hands if <br>
@@ -24,11 +25,10 @@
 
 gas pump handle,
 your cell phone,
-a doorknob.</p>
-<br><img src="pic2.jfif" width="200" height="100">
+a doorknob.</p><img src="pic2.jfif" width="200" height="100">
 <h3>3. Stop shaking hands and hugging people — for now</h3>
 <p>Similarly, avoid touching other people. Skin-to-skin contact can transmit SARS-CoV-2 from one<br>
-    person to another.</p><br>
+    person to another.</p>
 <img src="pic3.jfif"width="200" height="150">
 <h2>Helpline Number</h2>
 <table border="1">
@@ -48,7 +48,8 @@ a doorknob.</p>
 
 
 </table>
+<footer><hr></footer>
 
 </body>
-</head>
+
 </html>
